--- a/aboutme.html
+++ b/aboutme.html
@@ -98,7 +98,7 @@ margin:auto;
 <div style="background-color:lightgreen">
 
 
-<img src="C:\Users\ASUS\Desktop\html project\vizag.jpg"  usemap="#wormap"   style="width:150px;height:150px;" align="right">
+<img src="vizag.jpg"  usemap="#wormap"   style="width:150px;height:150px;" align="right">
 <map name="wormap">
   <area shape="rect" coords="30,20,100,130" alt="my photograph" href="https://www.linkedin.com/in/mehul-doshi-549929199">
 
