--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
 </div>
 
 <div class="id">
-<h1 id="logo" style="font-style:oblique; text-shadow:5px 5px 5px #EC7063 ;">~MEHUL DOSHI</h1>
-<h3 style="text-shadow:5px 5px 5px #D98880  ;"><pre>        (2019kucp1047)</pre></h3>
+<h1 id="logo" style="font-style:oblique; text-shadow:5px 5px 5px #EC7063 ;">~Diwakar mali</h1>
+<h3 style="text-shadow:5px 5px 5px #D98880  ;"><pre>        (2019kuec2021)</pre></h3>
 </div>
 <div class="quote">
 <PRE>
